# ashare-trend-screener

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  pyproject.toml  railway.json  render.yaml  strategy.example.toml  strategy.plan_a.toml
.ai/: README.md
.ai/ADR/: README.md
.ai/Logs/: README.md
docs/: plan-a-rollout.md
frontend/: index.html
frontend/app/: README.md  main.js
frontend/app/api/: mvp-client.js
frontend/app/contracts/: strategy-form.js  ui-copy.js
frontend/app/pages/: strategy-page.js
frontend/app/stores/: fallback-data.js  strategy-store.js
frontend/app/utils/: dom-elements.js  fallback-payload.js  render-formatters.js
frontend/app/view/: index.js
frontend/src/: api.js  dom.js  fallback-data.js  main.js  render-utils.js  render.js  strategy-engine.js
frontend/styles/: app.css
scripts/: check_akshare.py  run_akshare_scan.py  start_mvp_server.cmd  start_mvp_server.ps1
src/ashare_strategy/: __init__.py  analytics.py  api.py  backtest.py  config.py  market.py  market_review.py  models.py  mvp_service.py  mvp_text.py  qa_service.py  retry.py  server.py  strategy.py
src/ashare_strategy/api/: __init__.py  http.py
src/ashare_strategy/contracts/: __init__.py  strategy_input.py
src/ashare_strategy/core/: __init__.py
src/ashare_strategy/mappers/: __init__.py  mvp_page_mapper.py  strategy_plan_mapper.py
src/ashare_strategy/providers/: __init__.py  akshare_provider.py  base.py  csv_provider.py  tushare_provider.py
src/ashare_strategy/repositories/: __init__.py  (+3 more)
tests/: test_strategy_smoke.py
(+31 files in other folders)
