[project]
name = "ashare-trend-screener"
version = "0.1.0"
description = "Private A-share stock screening and backtesting service for trend-start opportunities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "tushare>=1.4.20,<2.0.0",
  "akshare>=1.16.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

